# workshop_qut_mobile_robots

./: .gitignore  README.md  pyproject.toml
data/: marker_locations.json
data/tool_geometry/: chalk.stl  gripper-basic.stl  gripper-basic.stlbak
rhino/: 00_assembly_design.ghx  01_robot_visualisation.ghx  02_robot_base_map_evaluation.ghx  03_robot_localisation.ghx  04_robot_moveit_planning.ghx  05_robot_moveit_planning_and_control.ghx  workspace_base-OLD.3dm  workspace_base.3dm
src/base_positioning/: __init__.py  base_map.py  reuleaux.py
src/marker_tracking/: marker_utilities.py  markers.py
src/qut_assembly/: __init__.py  marked_part.py
src/qut_ur_fabrication_control/: onrobot_mixins.py  urscript_onrobot.py
